working ReverseContent method